[package]
name = "vinylify"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Prada <sergioprada@sergioprada.com>"]
description = "Import Spotify playlists to Discogs"
readme = "README.md"
license = { file = "LICENSE" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
clap = { version = "4.5.1", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
dotenv = "0.15.0"
indicatif = "0.17.8"
reqwest = "0.11.24"
rspotify = { version = "0.11", features = ["env-file"] }
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }
